--- a/src/app/components/shared/navigation/navigation.component.html
+++ b/src/app/components/shared/navigation/navigation.component.html
@@ -14,6 +14,17 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/product">Product</a>
                 </li>
+                <li class="nav-item" *ngIf="!isLoggedIn">
+                    <a class="nav-link" routerLink="/login">Login</a>
+                </li>
+                <li class="nav-item dropdown" *ngIf="isLoggedIn">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">{{ currentUser.name }}</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownId">
+                        <a class="dropdown-item" routerLink="/profile">Profile</a>
+                        <a class="dropdown-item" routerLink="/" (click)="logout()">Logout</a>
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
